add seo description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Klinik Dokter Gigi MDc melayani perawatan kesehatan gigi dan mulut di Bogor Utara. Klinik swasta ini dikelola oleh dokter-dokter gigi handal yang berpengalaman di bidang nya.">
   <meta name="author" content="">
 
   <title>Klinik Gigi MDc</title>
