--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <p>
-            Untuk pertanyaan, booking appointment, dan sebagainya, silahkan kontak kami di:
+            Untuk pertanyaan, booking appointment, dan sebagainya, silahkan hubungi kami di:
           </p>
           <h4>08xx-xxxx-xxx</h4>
           <p>(bisa WhatsApp)</p>
@@ -174,7 +174,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Jadwal Praktek</h2>
-          <h3 class="section-subheading text-muted">Berikut adalah jadwal praktek kami. Silahkan klik untuk memperbesar.</h3>
+          <h3 class="section-subheading text-muted">Berikut adalah jadwal praktek kami. Silahkan klik tabel dibawah untuk memperbesar ukuran gambar.</h3>
         </div>
       </div>
       <div class="row text-center">
