--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           <p>
             Untuk pertanyaan, booking appointment, dan sebagainya, silahkan hubungi kami di:
           </p>
-          <h4>08xx-xxxx-xxx</h4>
-          <p>(bisa WhatsApp)</p>
+          <h4>08777-6999-799</h4>
+          <!-- <p>(bisa WhatsApp)</p> -->
         </div>
       </div>
     </div>
@@ -145,19 +145,19 @@
             <div class="col-md-6">
               <ul class="list-group list-group-flush services-list__left">
                 <li class="list-group-item">Tambal Gigi</li>
-                <li class="list-group-item">Orthodontie</li>
                 <li class="list-group-item">Premedikasi</li>
+                <li class="list-group-item">Bedah Minor</li>
                 <li class="list-group-item">Topical Application</li>
-                <li class="list-group-item">Pembuatan Gigi Palsu</li>
-                <li class="list-group-item">Perawatan Saluran Akar</li>
+                <li class="list-group-item">Merapikan Gigi/Kawat Gigi</li>
+                <li class="list-group-item">Pembuatan Gigi Palsu (Protesa</li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul class="list-group list-group-flush services-list__right">
-                <li class="list-group-item">Veneer</li>
                 <li class="list-group-item">Cabut Gigi</li>
                 <li class="list-group-item">Konsultasi</li>
-                <li class="list-group-item">Bedah Minor</li>
+                <li class="list-group-item">Veneer Gigi</li>
+                <li class="list-group-item">Perawatan Saluran Akar</li>
                 <li class="list-group-item">Pembersihan Karang Gigi</li>
                 <li class="list-group-item">Pemutihan Gigi/Bleaching</li>
               </ul>
@@ -202,7 +202,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/team/1.jpg" alt="">
+                <!-- <img class="rounded-circle img-fluid" src="img/team/1.jpg" alt=""> -->
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -217,7 +217,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/team/2.jpg" alt="">
+                <!-- <img class="rounded-circle img-fluid" src="img/team/2.jpg" alt=""> -->
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -227,6 +227,51 @@
                 <div class="timeline-body">
                   <p class="text-muted">Dokter Pelaksana</p>
                   <p class="text-muted">(440/050-I/drg/00237DPMTSP/2017)</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/team/2.jpg" alt=""> -->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Nafisa</h4>
+                  <h4 class="subheading">Drg. Adhitya Nafisa</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Dokter Pelaksana</p>
+                  <!-- <p class="text-muted">(440/050-I/drg/00237DPMTSP/2017)</p> -->
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/team/2.jpg" alt=""> -->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Kejora</h4>
+                  <h4 class="subheading">Drg. Kejora Hanadinanti</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Dokter Pelaksana</p>
+                  <!-- <p class="text-muted">(440/050-I/drg/00237DPMTSP/2017)</p> -->
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/team/2.jpg" alt=""> -->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Farris</h4>
+                  <h4 class="subheading">Drg. Farris Zakki Giffari</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Dokter Pelaksana</p>
+                  <!-- <p class="text-muted">(440/050-I/drg/00237DPMTSP/2017)</p> -->
                 </div>
               </div>
             </li>
