--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#promotions">Promosi</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#address">Alamat</a>
           </li>
           <li class="nav-item">
@@ -81,6 +84,23 @@
     </div>
   </header>
 
+  <!-- Promotions -->
+  <section class="bg-light page-section" id="promotions">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Promosi</h2>
+          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-12">
+            <img class="img-fluid" src="img/promosi-agu-sep-2019.jpeg" alt="Promosi">
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <!-- Address -->
   <section class="page-section" id="address">
     <div class="container">
@@ -101,7 +121,7 @@
             <br>
             Kec. Bogor Utara
           </p>
-          <a class="btn btn-info btn-large text-uppercase" target="_blank" href="https://www.google.co.id/maps/place/Achmad+Adnawijaya+Street+No.7,+RT.2%2FRW.5,+Tegal+Gundil,+North+Bogor,+Bogor+City,+West+Java+16152/@-6.5762013,106.8157173,17z/data=!3m1!4b1!4m5!3m4!1s0x2e69c682aaba34f1:0x14235a698e3c842e!8m2!3d-6.5762013!4d106.817906">
+          <a class="btn btn-info btn-large text-uppercase" target="_blank" href="https://www.google.com/maps/place/Klinik+Gigi+MDC/@-6.5822368,106.8156753,17z/data=!3m1!4b1!4m5!3m4!1s0x2e69c781a70ca715:0x7d5430584051754d!8m2!3d-6.5822421!4d106.817864">
             Lihat di Google Maps
           </a>
         </div>
