--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-12">
-            <img class="img-fluid" src="img/promosi-agu-sep-2019.jpeg" alt="Promosi">
+            <img class="img-fluid" src="img/promo oktober.jpeg" alt="Promosi">
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-12">
-          <p class="text-muted">
+          <!-- <p class="text-muted">
             Ruko Bangbarung Grande
             <br>
             Jalan Pandu Raya No. 7
@@ -120,10 +120,18 @@
             Kel. Tegal Gundil
             <br>
             Kec. Bogor Utara
-          </p>
+          </p> -->
           <a class="btn btn-info btn-large text-uppercase" target="_blank" href="https://www.google.com/maps/place/Klinik+Gigi+MDC/@-6.5822368,106.8156753,17z/data=!3m1!4b1!4m5!3m4!1s0x2e69c781a70ca715:0x7d5430584051754d!8m2!3d-6.5822421!4d106.817864">
             Lihat di Google Maps
           </a>
+        </div>
+      </div>
+      <div class="row text-center" style="margin-top: 2%">
+        <div class="col-md-6">
+          <img class="img-fluid" src="img/lokasi.jpeg" alt="Lokasi">
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="img/persuasi.jpeg" alt="Marketing">
         </div>
       </div>
     </div>
