--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-12">
-            <img class="img-fluid" src="img/promo oktober.jpeg" alt="Promosi">
+            <img class="img-fluid" src="img/promo.jpeg" alt="Promosi">
         </div>
       </div>
     </div>
@@ -337,22 +337,21 @@
             <ol class="carousel-indicators">
               <li data-target="#carousel" data-slide-to="0" class="active"></li>
               <li data-target="#carousel" data-slide-to="1"></li>
-              <!-- <li data-target="#carousel" data-slide-to="2"></li> -->
+              <li data-target="#carousel" data-slide-to="2"></li>
+              <li data-target="#carousel" data-slide-to="3"></li>
             </ol>
-            <div class="carousel-inner">
+            <div class="carousel-inner" style="background-color: black;">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/location-photos/ruang-konsultasi.jpeg" alt="Ruang Konsultasi">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Ruang Konsultasi</h5>
-                  <a class="see-original-location-photo" href="img/location-photos/ruang-konsultasi.jpeg" target="_blank">Klik untuk Melihat Foto Asli</a>
-                </div>
+                <img class="d-block w-100" src="img/location-photos/resepsionis.jpeg">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/location-photos/ruang-praktek.jpeg" alt="Ruang Praktek">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Ruang Praktek</h5>
-                  <a class="see-original-location-photo" href="img/location-photos/ruang-praktek.jpeg" target="_blank">Klik untuk Melihat Foto Asli</a>
-                </div>
+                <img class="d-block w-100" src="img/location-photos/tempat-konsultasi.jpeg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/location-photos/ruang-pemeriksaan.jpeg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/location-photos/dental-unit.jpeg">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel" role="buttton" data-slide="prev">
