--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#promotions">Promosi</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#address">Alamat</a>
           </li>
@@ -84,13 +84,22 @@
     </div>
   </header>
 
+  <section class="bg-light page-section" id="">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-12">
+            <img class="img-fluid" src="img/apd.jpeg" alt="Staf dengan APD">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Promotions -->
-  <section class="bg-light page-section" id="promotions">
+  <!-- <section class="bg-light page-section" id="promotions">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Promosi</h2>
-          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
         </div>
       </div>
       <div class="row text-center">
@@ -99,7 +108,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   
   <!-- Address -->
   <section class="page-section" id="address">
