--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Jadwal Praktek</h2>
-          <h3 class="section-subheading text-muted">Berikut adalah jadwal praktek kami. Silahkan klik tabel dibawah untuk memperbesar ukuran gambar.</h3>
+          <h3 class="section-subheading text-muted">Jam operasional kami dari jam 10 pagi hingga 8 malam.</h3>
         </div>
       </div>
-      <div class="row text-center">
+      <!-- <div class="row text-center">
         <div class="col-md-8 offset-md-2">
           <a href="img/jadwal-praktek.png" target="_blank">
             <img class="img-fluid" src="img/jadwal-praktek.png" alt="Jadwal Praktek">
-            <!-- Source: https://codepen.io/dotm/pen/BebZQN -->
+            Source: https://codepen.io/dotm/pen/BebZQN
           </a>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
